Models, Database and Seeding data was developed.

--- a/eTickets/appsettings.json
+++ b/eTickets/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Server =.,1433;Database=eTickets_DB;User Id=dbuser;Password=1qaz!QAZ"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
